--- a/PlottingScripts/ProcessPlotData.Rmd
+++ b/PlottingScripts/ProcessPlotData.Rmd
@@ -203,7 +203,6 @@ processContext <- function(data){
 data$Rev<-ReverseComp(as.character(data$Context))
 data$RevRef<-ReverseComp(as.character(data$Ref))
 data$RevAlt<-ReverseComp(as.character(data$Alt))
-
 #only get one half (to fold over)
 AC<-data[which(data$Ref 
                %in% 
@@ -231,6 +230,7 @@ binCount$Mut <- paste(substr(binCount$Var1,1,3),
                       substr(binCount$Var1,5,5))
 return(binCount)
 }
+
 
 SNP <- processContext(SNP)
 rSNP <- processContext(rSNP)
@@ -573,7 +573,7 @@ data_bim <- fread(paste0(DataPath,
   select(rsID)
 
 data_fam <- fread(paste0(DataPath,
-                         'Significant_Positions_allPop.fam'), 
+                         'Significant_Positions_allPop.fam'), `
                   col.names = c('familyID','sample',
                                 'father','mother',
                                 'sex','pheno')) %>%
